--- a/Movie/MoviePages/src/app/homepage/homepage.component.css
+++ b/Movie/MoviePages/src/app/homepage/homepage.component.css
@@ -1,35 +1,69 @@
-img {
-    width: 300px;
-    border-radius: 5px;
+* {
+    font-family: arial;
 }
 
-span {
-    display: block;
-    text-align: center;
-    color: whitesmoke;
-    font-size: 20px;
-}
-
-.big-div {
+.popular-movie {
     display: flex;
+    position: relative;
     flex-wrap: wrap;
-    justify-content: center;
-    background-color: rgb(41, 40, 40);
-    max-width: 1600px;
+    width: 1500px;
+        margin: 0 auto;
+        padding-top: 0px;
 }
 
-.small-div {
+.movie-img {
     display: inline-block;
-    width: 300px;
-    padding: 10px;
-    margin: 20px;
-    background-color: rgb(28, 27, 27);
-    border-radius: 5px;
 }
 
-.bigest-div {
+.backgound-div {
     background-color: rgb(41, 40, 40);
-    padding: 60px 300px 60px 300px;
+    padding: 80px 10px 0px 10px;
+    }
+    
+    .potato-description {
+        position: absolute;
+        width: 1500px;
+        margin: 0 auto;
+        background-color: rgb(28, 28, 28, 0.6);
+        bottom: 0;
+        height: 1800px;
+    }
+    
+    .inner-description {
+        color: white;
+        width: 900px;
+        margin: 0 auto;
+        margin-top: 300px;
+        text-align: center;
+    }
+    
+    .input-div {
     display: flex;
+    align-items: center;
     justify-content: center;
+}
+input {
+    width: 400px;
+    height: 50px;
+    border: none;
+}
+
+button {
+    height: 52px;
+    width: 140px;
+    font-size: 20px;
+    border: none;
+    background-color: #1ce783;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+input:focus {
+    outline: 0.5px solid #1ce783;
+}
+
+h1 {
+    font-size: 60px;
 }
