--- a/Movie/MoviePages/src/app/login/login.component.css
+++ b/Movie/MoviePages/src/app/login/login.component.css
@@ -1,88 +1,76 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: arial;
 }
 
 input {
-    background-color: rgb(57, 56, 56);
-    border: none;
+    background-color: white;
 }
 
 .login-big-div {
-    position: relative;
     background-size: cover;
-    display: block;
     height: 100%;
     min-height: 100vh;
     overflow: hidden;
-    position: absolute;
     width: 100vw;
     z-index: -1;
     background-image: url('https://assets.nflxext.com/ffe/siteui/vlv3/79fe83d4-7ef6-4181-9439-46db72599559/be1d82ef-72c1-4a2a-8c16-5170169f9ef8/US-en-20221017-popsignuptwoweeks-perspective_alpha_website_large.jpg');
 }
 
 .login {
-    background-color: rgba(0, 0, 0, .75);
-    border-radius: 6px;
-    box-sizing: border-box;
     display: flex;
-    flex-direction: column;
-    margin: 0;
-    min-height: 515px;
-    padding: 20px 0 30px;
-    width: 500px;
+        flex-direction: column;
+        justify-content: center;
+            align-items: center;
+    background-color: rgba(255, 255, 255, 0.75);
+        width: 400px;
+        margin: 0 auto;
+        margin-top: 300px;
+        border-radius: 5px;
+}
+
+.mat-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 75%;
+}
+
+.mat-full-width {
+    width: 100%;
     margin: 0 auto;
-    justify-content: center;
-    align-items: center;
-    color: #d5d5d5;
-    margin-top: 300px;
-}
-
-.input-block {
-    width: 300px;
-    height: 45px;
-    margin: 20px;
-    font-size: 20px;
-    border-radius: 5px;
-    color: whitesmoke;
-}
-
-button {
-    width: 305px;
-    height: 50px;
-    margin: 20px;
+    padding-top: 3px;
+    padding-bottom: 3px;
     font-size: 30px;
+}
+
+.mat-button {
     background-color: #1ce783;
-    border: none;
-    border-radius: 5px;
+    width: 100%;
+        margin-bottom: 30px;
 }
 
-.div-footer {
-    color: white;
+.mat-button:disabled {
+    background-color: rgb(211, 211, 211);
+}
+
+.matErrorMSG {
+    font-size: 15px;
+}
+h1 {
+    font-size: 40px;
     text-align: center;
-    background-color: #00000085;
-    height: 20vh;
-    position: sticky;
-    margin-top: 260px;
+    margin-top: 30px;
+}
+.signup {
+    color: rgb(254, 63, 63);
 }
 
-span {
-    margin: 5px;
+p {
+    text-align: center;
 }
 
-a {
-    text-decoration: none;
-    font-size: 20px;
-}
-
-a:visited {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-
-}
-
-
-a:active {
-    text-decoration: none;
-    color: white;
+.signup:hover {
+    cursor: pointer;
+    text-decoration: underline;
 }
