--- a/Movie/MoviePages/src/app/register/register.component.css
+++ b/Movie/MoviePages/src/app/register/register.component.css
@@ -1,124 +1,88 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: arial;
+    }
+    
+    input {
+        background-color: white;
 }
 
 .login-big-div {
-    position: relative;
     background-size: cover;
-    display: block;
     height: 100%;
     min-height: 100vh;
     overflow: hidden;
-    position: absolute;
-    width: 100%;
+    width: 100vw;
     z-index: -1;
     background-image: url('https://assets.nflxext.com/ffe/siteui/vlv3/79fe83d4-7ef6-4181-9439-46db72599559/be1d82ef-72c1-4a2a-8c16-5170169f9ef8/US-en-20221017-popsignuptwoweeks-perspective_alpha_website_large.jpg');
 }
 
 .login {
-    background-color: rgba(0, 0, 0, .75);
-    border-radius: 6px;
-    box-sizing: border-box;
     display: flex;
-    flex-direction: column;
-    margin: 0;
-    min-height: 515px;
-    padding: 20px 0 30px;
-    width: 500px;
-    margin: 0 auto;
-    color: #d5d5d5;
-    margin-top: 300px;
-    text-align: start;
-    justify-content: center;
+        flex-direction: column;
+        justify-content: center;
+            align-items: center;
+            background-color: rgba(255, 255, 255, 0.75);
+            width: 500px;
+            margin: 0 auto;
+        margin-top: 300px;
 }
 
-.input-block {
-    width: 300px;
-    height: 45px;
-    margin: 0 auto;
-    font-size: 20px;
-    border-radius: 5px;
-    color: whitesmoke;
+.mat-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 75%;
 }
-
-button {
-    width: 305px;
-    height: 50px;
+.mat-full-width {
+    width: 100%;
     margin: 0 auto;
+    padding-top: 3px;
+        padding-bottom: 3px;
     font-size: 30px;
+    margin-bottom: 10px;
+}
+
+.mat-checkbox {
+    width: 20%;
+}
+.mat-button {
     background-color: #1ce783;
-    border: none;
-    border-radius: 5px;
+    width: 100%;
+    margin-bottom: 30px;
 }
 
-.div-footer {
-    color: white;
+.mat-button:disabled {
+    background-color: rgb(211, 211, 211);
+}
+.mat-checkbox-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+        margin-bottom: 30px;
+        margin-top: 30px;
+}
+
+.hintMSG {
+    color: red;
+    font-size: 15px;
+}
+
+h1 {
     text-align: center;
-    background-color: #00000085;
-    height: 20vh;
-    position: sticky;
-    margin-top: 150px;
+    font-size: 38px;
+    margin-top: 30px;
 }
 
-span {
-    margin: 10px;
-    font-size: 20px;
+.signup {
+    color: rgb(254, 63, 63);
 }
 
-input {
-    background-color: rgb(57, 56, 56);
-    border: none;
-}
-
-a {
-    text-decoration: none;
-    font-size: 20px;
-}
-
-h1,
 p {
     text-align: center;
 }
 
-.input-type {
-    left: 0;
-    margin-left: 100px;
-    font-size: 20px;
-}
-
-.radio-button-div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.radio-button {
-    border: 0px;
-    width: 50px;
-    height: 20px;
-}
-
-
-
-a:visited {
-    text-decoration: none;
-    color: red;
-}
-
-a:hover {
-    text-decoration: none;
-
-}
-
-a:visited {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-
-}
-
-
-a:active {
-    text-decoration: none;
-    color: white;
+.signup:hover {
+    cursor: pointer;
+    text-decoration: underline;
 }
