--- a/Movie/MoviePages/src/app/header/header.component.html
+++ b/Movie/MoviePages/src/app/header/header.component.html
@@ -4,13 +4,13 @@
                 alt=""></label>
         <ul>
             <li>Movies</li>
-            <li (click)="goToLoginPage('movieItem')">Movie Items</li>
-            <li (click)="goToLoginPage('register')">Register</li>
+            <li routerLink="./movieItem/movieItem">Movie Items</li>
+            <li routerLink="./register/register">Register</li>
             <img src="https://as1.ftcdn.net/v2/jpg/01/27/72/28/1000_F_127722883_DD4Sp3V30YxvYut3sRsaJqv7TKloEuyH.jpg"
                 alt="">
             <input type="text">
-            <li *ngIf="!isLogin[0]" (click)="goToLoginPage('login')">Login</li>
-            <li *ngIf="isLogin[0]" (click)="goToLoginPage('login')">logged in </li>
+            <li *ngIf="!isLogin[0]" routerLink="./login/login">Login</li>
+            <li *ngIf="isLogin[0]" routerLink="./login/login">logged in </li>
         </ul>
     </nav>
 </div>
