--- a/Movie/MoviePages/src/app/movie-item/movie-item.component.html
+++ b/Movie/MoviePages/src/app/movie-item/movie-item.component.html
@@ -5,7 +5,7 @@
                 <img src="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{movie.poster_path}}">
             </div>
             <div class="description-div">
-                <span class="movie-title"><a href="">{{movie.title}}</a></span>
+                <span class="movie-title"><a id="{{movie.id}}" (click)="onOpenDialogClick($event)">{{movie.title}}</a></span>
                 <span>{{movie.release_date}}</span>
             </div>
             <span class="rating">{{movie.vote_average}}</span>
