--- a/Movie/MoviePages/src/app/header/header.component.css
+++ b/Movie/MoviePages/src/app/header/header.component.css
@@ -1,15 +1,14 @@
 .big-div {
-    position: absolute;
     font-family: arial;
 }
 
 .navtop {
-    /* background-image: linear-gradient(rgb(0, 0, 0, 0), rgb(41, 40, 40, 0)); */
     height: 80px;
     width: 99vw;
     display: flex;
     align-items: center;
     justify-content: end;
+    background-color: rgb(41, 40, 40);
 }
 
 label.logo {
