--- a/Movie/MoviePages/src/app/moviedetail/moviedetail.component.html
+++ b/Movie/MoviePages/src/app/moviedetail/moviedetail.component.html
@@ -1,5 +1,3 @@
 <div class="dialogSize">
-    <p>{{selectedMovieID}}</p>
-    <youtube-player videoId="{{youtubeID}}" [height]="675" [width]="1200" suggestedQuality="highres"></youtube-player>
-
+    <youtube-player videoId="{{youtubeID}}" [height]="675" [width]="1200" suggestedQuality="highres" [playerVars]="playerConfig"></youtube-player>
 </div>
