--- a/Movie/MoviePages/src/app/header/header.component.html
+++ b/Movie/MoviePages/src/app/header/header.component.html
@@ -3,8 +3,9 @@
         <label class="logo" (click)="goToLoginPage('homepage')"><img class="title" src="../../assets/potatoMovie.png"
                 alt=""></label>
         <ul>
-            <li>Movies</li>
-            <li routerLink="./movieItem/movieItem">Movie Items</li>
+            
+            <li routerLink="./movieItem/movieItem" (click)='roleTest()'>Movie Items</li>
+            <li (click)="logout()">Logout</li>
             <li routerLink="./register/register">Register</li>
             <img src="https://as1.ftcdn.net/v2/jpg/01/27/72/28/1000_F_127722883_DD4Sp3V30YxvYut3sRsaJqv7TKloEuyH.jpg"
                 alt="">
