--- a/Movie/MoviePages/src/app/update-role/update-role.component.html
+++ b/Movie/MoviePages/src/app/update-role/update-role.component.html
@@ -1,7 +1,11 @@
 <div class="big-div">
 <h1>Dear {{userEmail}}</h1>
+<br>
+<br>
+<br>
 <h2>You need an admin or super role to access the movie detail page, do you want to change your role?</h2>
-<button (click)="changeRoleToAdmin()">Yes,Change my role to admin</button>
-<button (click)="changeRoleToSuper()">Yes,Change my role to Super</button>
+<button value="ADMIN" (click)="updateRole($event)">Yes,Change my role to admin</button>
+<button value="SUPERUSER" (click)="updateRole($event)">Yes,Change my role to Super</button>
 <button (click)="dontChange()" class="redButton">No,Don't change it</button>
 </div>
+
