--- a/Movie/MoviePages/src/app/header/header.component.html
+++ b/Movie/MoviePages/src/app/header/header.component.html
@@ -5,13 +5,13 @@
         <ul>
             
             <li routerLink="./movieItem/movieItem" (click)='roleTest()'>Movie Items</li>
-            <li (click)="logout()">Logout</li>
             <li routerLink="./register/register">Register</li>
             <img src="https://as1.ftcdn.net/v2/jpg/01/27/72/28/1000_F_127722883_DD4Sp3V30YxvYut3sRsaJqv7TKloEuyH.jpg"
                 alt="">
             <input type="text">
             <li *ngIf="!isLogin[0]" routerLink="./login/login">Login</li>
-            <li *ngIf="isLogin[0]" routerLink="./login/login">logged in </li>
+            <li *ngIf="isLogin[0]" (click)="logout()">Logout</li>
+
         </ul>
     </nav>
 </div>
