--- a/Movie/MoviePages/src/app/update-role/update-role.component.css
+++ b/Movie/MoviePages/src/app/update-role/update-role.component.css
@@ -1,22 +1,30 @@
-.big-div{
-    background-color: rgb(41, 40, 40);
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
+.big-div {
+  background-color: rgb(41, 40, 40);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
 }
 button {
-    height: 52px;
-    width: 240px;
-    font-size: 20px;
-    border: none;
-    background-color: #1ce783;
-    margin:10px;
+  height: 52px;
+  width: 240px;
+  font-size: 20px;
+  border: none;
+  background-color: #1ce783;
+  margin: 10px;
 }
-button:hover{
-    cursor: pointer;
+button:hover {
+  cursor: pointer;
 }
-.redButton{
-    background-color: rgb(255, 104, 104);
+.redButton {
+  background-color: rgb(255, 104, 104);
+}
+.pw {
+  font-size: 30px;
+  background-color: white;
+  border-radius: 5px;
+  width: 400px;
+  height: 50px;
+  border: none;
 }
